# sofa

./: LICENSE  README-HSM.md  Taskfile.yml  keycloak-config-temp.json  keycloak-update.sh  kind-config.yaml  original-config.json  realm-temp.json  realm.json  sample-document.json
.github/: dependabot.yml
.github/workflows/: audit-tests.yml  authorization-tests.yml
audit-service/: Cargo.toml  Dockerfile
audit-service/src/: main.rs
config/: development.yaml
docs/: AUTHORIZATION.md  KUBERNETES_AUTHORIZATION.md
examples/: authorization-config.yaml
hsm-simulator/: Dockerfile  hsm_service.py  k8s-deployment.yaml  requirements.txt
k8s/: README.md  sofa-config.yaml
k8s/base/: kustomization.yaml
k8s/base/audit/: audit.yaml  kustomization.yaml
k8s/base/couchdb/: kustomization.yaml
k8s/base/dex/: dex.yaml  kustomization.yaml  nodeport.yaml
k8s/base/keycloak/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
k8s/base/sofa/: deployment.yaml  kustomization.yaml  secret.yaml  service.yaml  sofa-config.yaml  sofa-secrets.yaml
k8s/overlays/dev/: hsm-simulator-patch.yaml  keycloak-config-patch.yaml  keycloak-deployment-patch.yaml  keycloak-service-patch.yaml  kustomization.yaml  sofa-config-patch.yaml  sofa-deployment-patch.yaml
k8s/overlays/prod/: keycloak-deployment-patch.yaml  kustomization.yaml  resources-patch.yaml  sofa-config-patch.yaml
k8s/overlays/test/: keycloak-deployment-patch.yaml  kustomization.yaml  sofa-config-patch.yaml  sofa-secrets.yaml  test-client.yaml
scripts/: fix-dex.sh  pod_test.sh  requests.sh  run-sofa-with-encryption.sh  setup-keycloak.sh  test-encryption-local.sh  test-encryption.sh
sofa/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.azure  README.md  Taskfile.yml
sofa/k8s/: couchdb.yaml  deployment.yaml  dex.yaml  sofa-config.yaml
sofa/scripts/: load-to-kind.sh  setup-test-env.sh
sofa/src/: audit.rs  auth.rs  config.rs  encryption.rs  hsm.rs  lib.rs  main.rs  proxy.rs
sofa/tests/: audit_integration_tests.rs  authorization_integration_tests.rs  mock_audit_service.rs  oauth_client.rs
tests/: sample-document.json
