[package]
name = "sofa"
version = "0.1.0"
edition = "2021"

[features]
default = ["hsm-simulator"]
hsm-simulator = []
azure-hsm = ["azure_identity", "azure_security_keyvault"]

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.34"
tower-http = { version = "0.5.1", features = ["cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
config = "0.13.4"
dotenv = "0.15.0"
anyhow = "1.0.79"
jsonwebtoken = "9.2.0"
async-trait = "0.1.77"
axum-extra = { version = "0.9.2", features = ["typed-header"] }
http = "1.0.0"
base64 = "0.21.7"
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
regex = "1.11.1"
aes-gcm = "0.10.3"
sha2 = "0.10.8"
hyper = "1.1.0"
http-body-util = "0.1.0"
futures = "0.3.30"

# Optional dependencies for Azure HSM
azure_identity = { version = "0.10.0", optional = true }
azure_security_keyvault = { version = "0.10.0", optional = true }

[dev-dependencies]
assert_matches = "1.5.0"

[[bin]]
name = "oauth_client"
path = "tests/oauth_client.rs"
